add & show posts, head auth, load animation added

--- a/public/index.html
+++ b/public/index.html
@@ -22,11 +22,15 @@
     <!-- Compiled and minified JavaScript -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
 
-    <!-- Font Family import -->
+    <!-- Material Icons -->
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+    <!-- ? Required materialize CDN links -->
+
+    <!-- ? Font Family import -->
     <!-- <link href="https://fonts.googleapis.com/css2?family=Baloo+Thambi+2&display=swap" rel="stylesheet"> -->
     <!-- <link href="https://fonts.googleapis.com/css2?family=Istok+Web&display=swap" rel="stylesheet"> -->
     <link href="https://fonts.googleapis.com/css2?family=Manjari:wght@100;400;700&family=Sunflower&display=swap" rel="stylesheet">
-    <!-- ? Required materialize CDN links -->
+    <!-- ? Font Family import -->
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
